cambio a js. ejercicio contador

--- a/src/styles/components/_cartwidget.scss
+++ b/src/styles/components/_cartwidget.scss
@@ -1,8 +1,8 @@
-.cartwidget__icon {
+.cart-widget__icon {
     background-color: grey;
 }
 
-.cartwidget__counter {
+.cart-widget__counter {
     font-size: 13px;
     padding: 3px;
     font-weight: bold;
