--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @import "./components/cartwidget";
 @import "./components/itemlistcontainer";
 @import "./components/itemcount";
+@import "./components/itemDetail";
