--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,3 +9,8 @@ body {
     font-family: "Montserrat", sans-serif;
     background-color: white;
 }
+
+a {
+    color: black;
+    text-decoration: none;
+}
