--- a/src/styles/components/_itemcount.scss
+++ b/src/styles/components/_itemcount.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 }
   
 .itemcount__counter {
