--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,7 @@
 @import "./components/itemlistcontainer";
 @import "./components/itemcount";
 @import "./components/itemDetail";
+@import "./components/mainContainer";
+@import "./components/cartItem";
+@import "./components/form";
+@import "./components/purchaseSuccess";
