--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,11 @@ body {
     padding: 0;
     font-family: "Montserrat", sans-serif;
     background-color: white;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+body::-webkit-scrollbar { 
+    display: none;
 }
 
 a {
