--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import "./components/cartItem";
 @import "./components/form";
 @import "./components/purchaseSuccess";
+@import "./components/nikes";
