--- a/src/styles/components/_purchaseSuccess.scss
+++ b/src/styles/components/_purchaseSuccess.scss
@@ -1,7 +1,7 @@
 .container {
     text-align: center;
     padding: 40px 0;
-    background: #EBF0F5;
+    // background: #EBF0F5;
     h1 {
       color: #88B04B;
       font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
@@ -26,7 +26,7 @@
     background: white;
     padding: 60px;
     border-radius: 8px;
-    box-shadow: 0 2px 3px #C8D0D8;
+    box-shadow: 1px 1px 2px 2px #C8D0D8;
     display: inline-block;
     margin: 0 auto;
 }
