firebase auth, refactor, bugfix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,6 @@
 @import "./components/form";
 @import "./components/purchaseSuccess";
 @import "./components/nikes";
+@import "./components/login";
+@import "./components/register";
+@import "./components/reset";
